# world-history-engine

./: Dockerfile  README.md  config.py  event_driven_gen_mock.py  index.html  license.txt  log_example.txt  main.py  mcp_server.py  pyproject.toml  robots.txt  schema.txt  server.py  sitemap.xml  supervisord.conf  system_prompt.md
assets/: readme
data/custom/templates/: factions.yaml
data/naming/: biome_lexicons.yaml  character_names.yaml  entity_templates.yaml  faction_rules.yaml  resource_naming.yaml
data/templates/: belief.yaml  biomes.yaml  bosses.yaml  calendar.yaml  factions.yaml  locations.yaml  resources.yaml  traits.yaml  transformations.yaml
layouts/: layout.json
src/: interfaces.py  ioc.py  naming.py  narrative_engine.py  quest_engine.py  spatial_layout_gen.py  template_loader.py  utils.py  word_generator.py
src/constants/: tags.py
src/handlers/: edit_templates.py  llm_tools.py  simulation.py  simulation_handlers.py
src/models/: generation.py  mechanics.py  naming_schemas.py  registries.py  templates_schema.py
src/repositories/: in_memory.py
src/services/: llm_service.py  simulation.py  spatial_manager.py  storyteller.py  template_editor.py  world_query_service.py
src/systems/: belief_system.py  conflict_system.py  lifecycle_system.py  transformation_system.py
static/: index.html  world_viz.html
static/js/: api.js  app.js  chronicles.js  simulation.js  utils.js  workbench.js
world_output/: history.jsonl  world_final.json
world_output/snapshots/: world_epoch_0.json
